[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = "1.47.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
sqlx = "0.8.6"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
reqwest = { version = "0.11", features = ["json"] }
uuid = "1.0"
futures = "0.3"
solana-client = "3.0.1"
anyhow = "1.0.99"
solana-sdk = "2.1.5"
base64 = "0.22.1"
bincode = "1.3.3"