[package]
name = "solana-event-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.14.2"
bytes = "1.10.1"
futures = "0.3.31"
anyhow = "1.0.99"
futures-util = "0.3.31"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
yellowstone-grpc-client="6.0.0"
yellowstone-grpc-proto={version = "6.0.0", default-features = false }
bs58 = "0.5.0"
chrono = "0.4"
serde_json = "1.0.143"
solana-pubkey = "3.0.0"
hex = "0.4.3"
time = "0.3.43"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
solana-program = "3.0.0"
uuid = { version = "1.7", features = ["v4"] }
store = { path = "../store" }
sqlx = "0.8.6"
dotenv = "0.15.0"
