[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = "1.47.1"
solana-sdk = "1"
spl-memo = "3"
clap = { version = "3", features = ["derive", "color"] }
bs58 = "0.4"
rand07 = { package = "rand", version =  "0.7" }
ed25519-dalek = "1"
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa.git", rev = "4b5e5c8d8e92f94eed38b037e0d83ad0d2a144ea" }
curv = {package = "curv-kzen", version = "0.9" }
solana-client = "3.0.1"
store = { path = "../store" }
sqlx = "0.8.6"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
aes-gcm = "0.10.3"
base64 = "0.21"
hex = "0.4"
anyhow = "1.0.100"
bincode = "1.3.3"
spl-associated-token-account = "1"
reqwest = "0.12.23"
